# CLIP-ONNX-AX650-CPP

./: .gitignore  CMakeLists.txt  README.md  build.sh  text_bin.txt
qtproj/CLIPQT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/: main.cpp  main_ax620q.cpp
src/Runner/: BaseRunner.cpp  BaseRunner.hpp  CLIP.hpp  CLIPImageEncoder.hpp  CLIPImageEncoderAX650.hpp  CLIPImageEncoderOnnx.hpp  CLIPTextEncoder.hpp  CLIPTextEncoderAX650.hpp  CLIPTextEncoderOnnx.hpp  ax_model_runner.hpp  ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp
